# mi-movie

./: .env.example  .gitignore  README.md  app.go  config.go  default.aproj  go.mod  index.html  main.aardio  main.go  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  wails.json
.build/: default.Manifest.xml
.claude/: settings.local.json
.github/workflows/: tauri-build.yml
extension/: README.md
frontend/: index.html  package-lock.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/wailsjs/go/: models.ts
frontend/wailsjs/go/main/: App.d.ts  App.js
scripts/: sync-version.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  settings.rs
src-tauri/windows/: installer.nsi
src/components/: Settings.tsx  WebViewContainer.tsx
src/components/ui/: button.tsx
