[package]
name = "mi-movie"
version = "0.1.0"
description = "A cross-platform movie application with proxy and extension support"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5.0"
url = "2.5.8"
